--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^4.9.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.2",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
