--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+       <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyC-nYRKMxy7R24MO_tMPZko9uZYN_ILy7U"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
