--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
@@ -33,7 +35,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
