--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
@@ -22,6 +23,7 @@
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
@@ -34,9 +36,11 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
-    "react-native-toast-message": "^2.2.1",
+    "react-native-toast-message": "^2.3.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5"
   },
@@ -58,6 +62,7 @@
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/whatwg-url": "^13.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
