--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BASE_URL=https://emanat-api.siesco.studio/mobile
-API_VERSION=v1
+API_URL=https://emanat-api.siesco.studio
+# API_URL=http://192.168.10.119:5045/api
+APP_ENV=production
