--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
+    "react-native-device-info": "^14.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
