--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-redash": "^18.1.3",
