--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URL=https://emanat-api.siesco.studio
-# API_URL=http://192.168.10.119:5045/api
+# API_URL=https://emanat-api.siesco.studio
+API_URL=http://192.168.10.104:5045/api
 APP_ENV=production
