feat: Update API URLs and improve signalR connection handling across multiple screens

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # API_URL=https://emanat-api.siesco.studio
 API_URL=http://172.23.0.78:5000
+SIGNALR_URL=http://172.23.0.78:5000/notification/hubs/mobile
 APP_ENV=production
