--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-snap-carousel": "^3.9.1",
@@ -43,8 +42,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
