--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URL=http://172.23.0.78:5000
-SIGNALR_URL=http://172.23.0.78:5000/notification/hubs/mobile
+API_URL=https://ekassa-api.e-portal.az
+SIGNALR_URL=https://ekassa-api.e-portal.az/notification/hubs/mobile
 APP_ENV=production
