--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
-    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
@@ -38,7 +37,7 @@
     "react-native-screens": "^4.9.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.14.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-url-polyfill": "^2.0.0",
@@ -63,6 +62,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "@types/whatwg-url": "^13.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
