--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
