--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-maps": "^1.20.1",
@@ -36,7 +37,8 @@
     "react-native-svg": "^15.14.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
