--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
@@ -7,6 +6,25 @@ require Pod::Executable.execute_command('node', ['-p',
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
+
+def node_require(script)
+  # Resolve script with node to allow for hoisting
+  require Pod::Executable.execute_command('node', ['-p',
+    "require.resolve(
+      '#{script}',
+      {paths: [process.argv[1]]},
+    )", __dir__]).strip
+end
+
+node_require('react-native-permissions/scripts/setup.rb')
+
+setup_permissions([
+  'Camera',
+  'PhotoLibrary',
+  'Microphone',
+  'LocationWhenInUse',
+  'LocationAlways',
+])
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
