--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.4",
