--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -3,6 +3,8 @@
 # To customize your local environment, you can create an `.xcode.env.local`
 # file that is not versioned.
 
+export LANG=en_US.UTF-8
+
 # NODE_BINARY variable contains the PATH to the node executable.
 #
 # Customize the NODE_BINARY variable here.
